tests/stage3/semantic_implement_return_type_mismatch.err
type error
line: 10
interface method return type mismatch
expected: i32
got: bool
